2004-04-09  Bob Halley  <halley@dnspython.org>

	* dns/zone.py (_MasterReader._rr_line): The masterfile reader
	erroneously treated lines starting with leading whitespace but
	not having any RR definition as an error.  It now treats
	them like a blank line (which is not an error).

2004-04-01  Bob Halley  <halley@dnspython.org>
	
	* (Version 1.3.0 released)

2004-03-19  Bob Halley  <halley@dnspython.org>

	* Added support for new DNSSEC types RRSIG, NSEC, and DNSKEY.

2004-01-16  Bob Halley  <halley@dnspython.org>

	* dns/query.py (_connect): Windows returns EWOULDBLOCK instead
	of EINPROGRESS when trying to connect a nonblocking socket.

2003-11-13  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/ANY/LOC.py (LOC.to_wire): We encoded and decoded LOC
	incorrectly, since we were interpreting the values of altitiude,
	size, hprec, and vprec in meters instead of centimeters.

	* dns/rdtypes/IN/WKS.py (WKS.from_wire): The WKS protocol value is
	encoded with just one octet, not two!

2003-11-09  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py (Cache.maybe_clean): The cleaner deleted items
	from the dictionary while iterating it, causing a RuntimeError
	to be raised.  Thanks to Mark R. Levinson for the bug report,
	regression test, and fix.

2003-11-07  Bob Halley  <halley@dnspython.org>

	* (Version 1.2.0 released)

2003-11-03  Bob Halley  <halley@dnspython.org>

	* dns/zone.py (_MasterReader.read): The saved_state now includes
	the default TTL.

2003-11-01  Bob Halley  <halley@dnspython.org>

	* dns/tokenizer.py (Tokenizer.get): The tokenizer didn't
	handle escaped delimiters.

2003-10-27  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py (Resolver.read_resolv_conf): If no nameservers
	are configured in /etc/resolv.conf, the default nameserver
	list should be ['127.0.0.1'].

2003-09-08  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py (Resolver._config_win32_fromkey): We didn't
	catch WindowsError, which can happen if a key is not defined